--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@types/eslint": "^9.6.0",
 		"eslint": "^9.7.0",
 		"eslint-plugin-svelte": "^2.36.0",
+		"flowbite": "^2.5.2",
 		"globals": "^15.0.0",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
