--- a/package.json
+++ b/package.json
@@ -18,11 +18,16 @@
 		"eslint": "^9.7.0",
 		"eslint-plugin-svelte": "^2.36.0",
 		"flowbite": "^2.5.2",
+		"flowbite-svelte": "^0.47.2",
+		"flowbite-svelte-icons": "^2.0.2",
 		"globals": "^15.0.0",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0",
 		"vite": "^5.0.3"
+	},
+	"dependencies": {
+		"@sveltejs/adapter-static": "^3.0.6"
 	}
 }
